--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="card">
       <header>
         <!-- Ganti nama file jika perlu -->
-        <img src="me.jpg" alt="Hilmal Bintang Al Azis" class="avatar">
+        <img src="me.jpg" alt="" class="avatar">
         <div>
           <h1>Hilmal Bintang Al Azis</h1>
           <div class="tagline">Blockchain Enthusiast · Node Operator · Retrodrop Hunter</div>
