--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
   <div class="wrap">
     <div class="card">
       <header>
-        <!-- Ganti nama file jika perlu -->
-        <img src="me.jpg" alt="" class="avatar">
+        <!-- Foto profil -->
+        <img src="me.jpg?v=2" alt="" class="avatar">
         <div>
           <h1>Hilmal Bintang Al Azis</h1>
           <div class="tagline">Blockchain Enthusiast · Node Operator · Retrodrop Hunter</div>
           <div class="muted">Since 2022 — focused on infra, validator security, and hands-on testnets.</div>
           <div style="margin-top:12px">
-            <!-- Ganti href dengan akunmu -->
+            <!-- Link akun -->
             <a class="pill" href="https://github.com/hilmal23" target="_blank" rel="noopener">GitHub</a>
             <a class="pill" href="mailto:you@example.com">Email</a>
-            <a class="pill" href="https://t.me/hilmalll" target="_blank" rel="noopener">Telegram</a>
+            <a class="pill" href="https://t.me/hilmal11" target="_blank" rel="noopener">Telegram</a>
           </div>
         </div>
       </header>
