--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="card">
       <header>
         <!-- Foto profil -->
-        <img src="me.jpg?v=3" alt="" class="avatar">
+        <img src="me.jpg?v=3" alt="Profile photo" class="avatar">
         <div>
           <h1>Hilmal Bintang Al Azis</h1>
           <div class="tagline">Blockchain Enthusiast · Node Operator · Retrodrop Hunter</div>
